fix overflow from hidden to wrap

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: 'Gill Sans', sans-serif;
+  font-family: "Gill Sans", sans-serif;
   font-weight: 300;
   color: white;
   line-height: 1.9;
@@ -52,7 +52,7 @@ body {
 
 /* GENERAL ELEMENTS */
 .section {
-  overflow: hidden;
+  overflow: wrap;
   padding: 15rem 3rem;
   height: 100vh;
   border-top: 1px solid #ddd;
